Added intro and methods first paragraphs
yet to include the code cell descriptions

--- a/Group 8 Project.ipynb
+++ b/Group 8 Project.ipynb
@@ -24,7 +24,7 @@
    "id": "17fb1548-7516-42eb-b58f-e58e835ef94d",
    "metadata": {},
    "source": [
-    "# (1) Data Description:"
+    "# (1) Introduction:"
    ]
   },
   {
@@ -32,55 +32,41 @@
    "id": "f08a9091-7a08-4d03-9770-c85bae0ae7e4",
    "metadata": {},
    "source": [
-    "**Imported 2 datasets.**\n",
+    "This project focuses on identifying the characteristics of players most likely to contribute significant amounts of data in the context of Minecraft gameplay. \n",
     "\n",
-    "**\"sessions.csv\"** includes\n",
-    " - **hashedEmail**             - (object, identifier)\n",
-    "   - encoded email address of player\n",
-    " - **start_time**              - (object, quantitative)\n",
-    "   - date and time the player started session\n",
-    " - **end_time**                - (object, quantitative)\n",
-    "   - date and time the player ended session\n",
-    " - **original_start_time**     - (float64, quantitative)\n",
-    "   - (UNIX time) player started session\n",
-    " - **original_end_time**       - (float64, quantitative)\n",
-    "   - (Unix time) player ended session\n",
+    "The key research question is: \n",
     "\n",
-    "**1535 observations**\n",
+    "*What player characteristics, such as age and experience, correlate with higher levels of playtime?*\n",
     "\n",
-    "**\"players.csv\"** includes\n",
-    " - **experience**              (object, categorical)\n",
-    "   - experience level\n",
-    " - **subscribe**               (Boolean)\n",
-    "   - whether the user has subscribed for the PlaitCraft mailing list\n",
-    " - **hashedEmail**         \n",
-    " - **played_hours**            (float64, quantitative)\n",
-    "   - number of hours played \n",
-    " - **name**                    (object, categorical)\n",
-    "   - chosen name of player\n",
-    " - **gender**                  (object, categorical)\n",
-    "   - chosen gender of player\n",
-    " - **age**                     (int64, quantitative)\n",
-    "   - age of player\n",
-    " - **individualId**            (float64, quantitative)\n",
-    "   - NAN\n",
-    " - **organizationName**        (float64, quantitative)\n",
-    "   - NAN\n",
+    "The goal is to understand how these factors relate to the total hours players spend in the game (played_hours).\n",
     "\n",
-    "**196 observations**\n",
+    "Two datasets are used in the analysis: sessions.csv and players.csv. The sessions.csv file, which includes session-level data (e.g., start and end times), was excluded from the analysis, as it does not directly contribute to understanding the cumulative playtime. Instead, the focus is on the players.csv dataset, which contains demographic and engagement data for 196 players, including their experience level, age, and total hours played.\n",
     "\n",
-    "This is raw data from PlaitCraft, and was collected from their Minecraft servers "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d00b44c9-52a2-4d56-a85a-cd306e5248c7",
-   "metadata": {},
-   "source": [
-    "**Potential Issues**\n",
-    "- the hashedEmail is not useful, as it is an identiier\n",
-    "- Unix time format is not useful\n",
-    "- the individualId and organizationName columns are all NAN "
+    "The analysis involves cleaning and transforming the dataset, performing exploratory data analysis (EDA), binning the played_hours into categories, and training a K-Nearest Neighbors (KNN) classifier to classify players into different playtime levels (low, medium, high). This approach aims to identify which player characteristics are most strongly associated with higher playtime.\n",
+    "\n",
+    "**Data Description**\n",
+    "\n",
+    "- \"sessions.csv\" includes:\n",
+    "    - hashedEmail: (object, identifier) - Encoded email address of the player.\n",
+    "    - start_time: (object, quantitative) - Date and time the player started the session.\n",
+    "    - end_time: (object, quantitative) - Date and time the player ended the session.=\n",
+    "    - original_start_time: (float64, quantitative) - (UNIX time) Player started the session.\n",
+    "    - original_end_time: (float64, quantitative) - (UNIX time) Player ended the session.\n",
+    "    - 1535 observations.\n",
+    "\n",
+    "- \"players.csv\" includes:\n",
+    "    - experience: (object, categorical) - Experience level of the player.\n",
+    "    - subscribe: (Boolean) - Whether the player has subscribed to the PlaitCraft mailing list.\n",
+    "    - hashedEmail: (object, identifier) - Encoded email address of the player.\n",
+    "    - played_hours: (float64, quantitative) - Total hours played by the player.\n",
+    "    - name: (object, categorical) - Chosen name of the player.\n",
+    "    - gender: (object, categorical) - Chosen gender of the player.\n",
+    "    - age: (int64, quantitative) - Age of the player.\n",
+    "    - individualId: (float64, quantitative) - Not used (contains NAN values).\n",
+    "    - organizationName: (float64, quantitative) - Not used (contains NAN values).\n",
+    "    - 196 observations.\n",
+    "\n",
+    "The dataset was collected from PlaiCraft's Minecraft servers. Some potential issues with the data include the hashedEmail column being an identifier and not useful for analysis, the Unix time format being unnecessary, and the individualId and organizationName columns containing only NAN values. For this analysis, the relevant variables are age, experience, and played_hours, while other columns were removed during preprocessing."
    ]
   },
   {
@@ -88,19 +74,25 @@
    "id": "24ce0fa0-0e3b-4871-a14c-1b9e3ad20f80",
    "metadata": {},
    "source": [
-    "# Question\n",
+    "# (2) Methods:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c16da139-8cf8-459e-9906-67f57ea74d04",
+   "metadata": {},
+   "source": [
+    "The objective is to determine which type of players are most likely to contribute a large amount of data. In this project, it is assumed that a player with a greater playtime contributes more data. Therefore, the response variable will be the played_hours, and the predictors will be age and experience. \n",
     "\n",
-    "We would like to know which type of players are most likely to contribute a large amount of data, to target them in recruitment efforts\n",
+    "This project only requires data from the players dataset. The sessions.csv dataset is useful for evaluating whether a player conducts their playtime in a few sessions or if they play consistently. It is assumed that all playtime is equal, and that it is necessary to maximize played_hours. With these assumptions in place, the sessions.csv dataset is not required. It would, however, require more insight into the knowledge domain to make an educated choice.\n",
     "\n",
-    "Assume a player with a greater playtime gives more data. Therefore, the response variable will be the played_hours, and the predictors will be age and experience.\n",
+    "Firstly, the players.csv dataset will be imported. Then, initial cleaning will be performed on the dataset to remove irrelevant and/or empty columns, which includes all columns besides played_hours, age and experience. \n",
     "\n",
-    "The question only requires data from the players dataset. The sessions dataset makes it useful to know if a player gets their playtime in a few sessions or if they play consistently. We make the assumption that all playtime is equal, and that it is necessary to maximize played_hours, hence we don't need the sessions dataset. It would require more insight into the knowledge domain to make an educated choice.\n",
+    "The played_hours column will then be categorized into three bins - low, medium, and high playtime - based on the median and 80th percentile values. To ensure balanced representation across categories, upsampling wil be applied to the categories with less data. One-hot-encoding will then be applied to the experience response variable to convert it into numerical format for the KNN classifier. \n",
     "\n",
-    "Firstly, we will clean the dataset by removing all columns besides played_hours, age and experience.\n",
+    "The dataset will then be split into training and testing sets, with age and encoded experience as predictors and playtime category as the target variable. A K-Nearest Neighbors (KNN) classifier will be trained using a pipeline that includes standard scaling to normalize the features. A grid search with cross-validation will then be used to optimize the number of nearest neighbors for the KNN model. The optimized model will then be used to make predictions, and visualizations will be created to compare the predicted results with the actual data, providing insights into the model’s performance and classification accuracy.\n",
     "\n",
-    "I then aim to wrangle the data in 2 steps. First by binning the played_hours column into 3 different categories, low, medium and high playtime. This will allow to apply KNN Classifier model on Age data. Second, one-hot encoding the experience response variable for use in the KNN Classifer.\n",
-    "\n",
-    "This is done because it is not necessary to predict the exact playtime. It is more important to find out which kinds of players have a generally higher number of played_hours."
+    "It should be noted that it is not necessary to predict the exact playtime in this project. It is more important to find out which kinds of players have a generally higher number of played_hours.\n"
    ]
   },
   {
