--- a/Group 8 Project.ipynb
+++ b/Group 8 Project.ipynb
@@ -32,13 +32,13 @@
    "id": "f08a9091-7a08-4d03-9770-c85bae0ae7e4",
    "metadata": {},
    "source": [
-    "This project focuses on identifying the characteristics of players most likely to contribute significant amounts of data in the context of Minecraft gameplay. \n",
+    "This project focuses on identifying the characteristics of players most likely to contribute significant amounts of data in the context of Minecraft gameplay.\n",
     "\n",
     "The key research question is: \n",
     "\n",
     "*What player characteristics, such as age and experience, correlate with higher levels of playtime?*\n",
     "\n",
-    "The goal is to understand how these factors relate to the total hours players spend in the game (played_hours).\n",
+    "The goal is to understand how these factors relate to the total hours players spend in the game (played_hours). This analysis is important for Plaicraft, so they are able to focus their marketing to target players of a certain age and experience level, who will in turn play the longest and hence return the most data to Plaicraft. It is assumed that the data collected of every player is equal, so therefore a player with the longest playtime will return the most data. It would require more information into the knowledge domain to optimize this.\n",
     "\n",
     "Two datasets are available for the analysis: sessions.csv and players.csv. The sessions.csv file, which includes session-level data (e.g., start and end times), was excluded from the analysis as it does not directly contribute to understanding the cumulative playtime. Instead, the focus is on the players.csv dataset, which contains demographic and engagement data for 196 players, including their experience level, age, and total hours played.\n",
     "\n",
@@ -406,7 +406,7 @@
     "\n",
     "The dataset will then be split into training and testing sets (0.3 split), with age and encoded experience as predictors and playtime category as the target variable. A K-Nearest Neighbors (KNN) classifier will be trained using a pipeline that includes standard scaling to normalize the features. A grid search with cross-validation will then be used to optimize the number of nearest neighbours for the KNN model. The optimized model will then be used to make predictions, and visualizations will be created to compare the predicted results with the actual data, providing insights into the model’s performance and classification accuracy.\n",
     "\n",
-    "It should be noted that it is not necessary to predict the exact playtime in this project. It is more important to find out which kinds of players have a generally higher number of played_hours.\n"
+    "It should be noted that it is not necessary to predict the exact playtime in this project. It is more important to find out which kinds of players have a generally higher number of played_hours, which is why a KNN model is used rather than regression analysis. \n"
    ]
   },
   {
@@ -1048,9 +1048,7 @@
    "id": "c943b19c-1c23-4b0c-8d11-6965dce40d2b",
    "metadata": {},
    "source": [
-    "It can be seen from Figure 2 above that the majority of players have a played_hours value of <10.\n",
-    "\n",
-    "The dataset also includes two extremes, indicating that players either play very little or a lot."
+    "It can be seen from Figure 2 above that the majority of players have a played_hours value of <10. This indicating that there is a great inequality in playtime. It will be necessary to balance this"
    ]
   },
   {
@@ -1163,7 +1161,7 @@
    "id": "eece22f8-4db6-4e32-b077-856d368316ce",
    "metadata": {},
    "source": [
-    "It can be seen that the majority of the players are aged between 15 - 25 years old."
+    "It can be seen that the majority of the players are aged between 15 - 25 years old, while there is a small amount of players from 5-15, 30-55, and 90-100"
    ]
   },
   {
@@ -1198,14 +1196,6 @@
     "top_20_playtime = np.percentile(players_clean[\"played_hours\"], 80)\n",
     "\n",
     "print(\"median playtime is\", median_playtime, \"hours\" \"\\ntop 20% playtime is\", top_20_playtime, \"hours\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2f9c28b7-af63-4a9b-807e-a843032cc2bc",
-   "metadata": {},
-   "source": [
-    "It is determined that the median playtime is 0.1 hour, and the top 20% playtime is 1 hour."
    ]
   },
   {
@@ -1463,7 +1453,7 @@
    "id": "db720262-0b7b-4457-9c94-ef82d9c16388",
    "metadata": {},
    "source": [
-    "Looking at the above table, it can be seen that there are only 10 players who have contributed over 20 hours of playtime."
+    "Looking at the above table, it can be seen that there are only 10 players who have contributed over 20 hours of playtime, which shows the inequality in the data"
    ]
   },
   {
@@ -2538,6 +2528,14 @@
     "from sklearn.metrics import accuracy_score\n",
     "accuracy = accuracy_score(predictions[\"category\"], predictions[\"predicted\"])\n",
     "accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ad5e60b-5144-4dba-8856-445f27e80db9",
+   "metadata": {},
+   "source": [
+    "The accuracy is far lower than initially expected, as we added the experience as a predictor after initially only testing with age. This is further discussed in the discussion"
    ]
   },
   {
